--- a/src/components/home/UploadCard.module.css
+++ b/src/components/home/UploadCard.module.css
@@ -96,7 +96,7 @@
 }
 
 .button:hover:not(:disabled) {
-  background: #333;
+  background: var(--color-interactive);
 }
 
 .button:disabled {
