--- a/src/components/view/ViewCard.module.css
+++ b/src/components/view/ViewCard.module.css
@@ -107,7 +107,7 @@
 }
 
 .buttonPrimary:hover {
-  background: #333;
+  background: var(--color-interactive);
 }
 
 .buttonSecondary {
